# AI-travel-assistant

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKLIST.md  COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  PRODUCTION_SPRINT.md  PROMPTS.md  Procfile  QUICKSTART.md  README.md  SUMMARY.md  check_secrets.sh  docker-compose.yml  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  run_tests.sh  vercel.json
.github/workflows/: main.yml
backend-agent/: .env.example  COMPATIBILITY_FIX.md  Dockerfile  IMPORT_OPTIONS.md  LANGGRAPH_MIGRATION.md  MIGRATION.md  README.md  agent.py  config.py  examples.py  preflight_check.py  requirements.txt  retriever.py  setup.sh  test_agent.py  test_api.sh  test_comprehensive.py
backend-agent/data/airport_guides/: JFK.md
backend-agent/data/city_guides/: london.md  new_york.md  tokyo.md
frontend/: .env.production  .gitignore  Dockerfile  EXECUTIVE_FEATURES.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: StrategicTravelAssistant.jsx
mcp-server/: Dockerfile  README.md  requirements.txt  server.py
mcp_server/: .gitignore  __init__.py  requirements.txt  server.py  test_comprehensive.py
